--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="message">
+        <h1>E & E</h1>
+    </div>
     <canvas id="alx"></canvas>
     <script src="script.js"></script>
 </body>
